--- a/vignettes/Antares_new_features_v920.Rmd
+++ b/vignettes/Antares_new_features_v920.Rmd
@@ -183,6 +183,122 @@ tab <- readInputTS(st_storage = "all",
 rmarkdown::paged_table(head(tab))
 ```
 
+### Additional 
+
+We can add additional constraints via the dedicated endpoints:
+
+ - constraints_properties
+ - TS constraints rhs_*
+
+#### Properties 
+
+```{r}
+# Create 
+createClusterST(area = "fr",
+                cluster_name = "Additional_Properties",
+                storage_parameters = my_parameters, 
+                PMAX_injection = NULL, 
+                PMAX_withdrawal = NULL, 
+                inflows = NULL, 
+                lower_rule_curve = NULL, 
+                upper_rule_curve = NULL,
+                cost_injection = NULL, 
+                cost_withdrawal = NULL,
+                cost_level = NULL,
+                cost_variation_injection = NULL, 
+                cost_variation_withdrawal =NULL,
+                constraints_properties <- list(
+                  "test"=list(
+                    variable = "withdrawal",
+                    operator = "equal",
+                    hours = c("[1,3,5]"),
+                  "test2"=list(
+                   variable = "netting",
+                   operator = "less",
+                   hours = c("[1, 168]")
+                 )
+                  )))
+
+# Edit 
+editClusterST (area = "fr", 
+               cluster_name = "Additional_Properties", 
+               storage_parameters = my_parameters, 
+                PMAX_injection = NULL, 
+                PMAX_withdrawal = NULL, 
+                inflows = NULL, 
+                lower_rule_curve = NULL, 
+                upper_rule_curve = NULL,
+                cost_injection = NULL, 
+                cost_withdrawal = NULL,
+                cost_level = NULL,
+                cost_variation_injection = NULL, 
+                cost_variation_withdrawal =NULL,
+               constraints_properties <- list(
+                 "test"=list(
+                   variable = "withdrawal",
+                   operator = "equal",
+                   hours = c("[1,3,5]",
+                              "[120,121,122,123,124,125,126,127,128]"),
+                   enabled = FALSE
+                 ),
+                 "test2"=list(
+                   variable = "netting",
+                   operator = "less",
+                   hours = c("[1, 168]")
+                 )))
+
+```
+
+#### Values 
+
+```{r}
+# Create
+good_ts <- matrix(0.7, nrow = 8760, ncol = 1)
+createClusterST(area = "fr",
+                cluster_name = "Additional_Values",
+                storage_parameters = my_parameters, 
+                PMAX_injection = NULL, 
+                PMAX_withdrawal = NULL, 
+                inflows = NULL, 
+                lower_rule_curve = NULL, 
+                upper_rule_curve = NULL,
+                cost_injection = NULL, 
+                cost_withdrawal = NULL,
+                cost_level = NULL,
+                cost_variation_injection = NULL, 
+                cost_variation_withdrawal =NULL,
+                constraints_properties <- list(
+                  "test"=list(
+                    variable = "withdrawal",
+                    operator = "equal",
+                    hours = c("[1,3,5]",
+                              "[120,121,122,123,124,125,126,127,128]")
+                    #enabled = FALSE
+                  ),
+                  "test2"=list(
+                    variable = "netting",
+                    operator = "less",
+                    hours = c("[1, 168]")
+                  )),
+                # constraints_ts 
+                constraints_ts <- list(
+                  "test" = good_ts,
+                  "test2"    = good_ts
+                ))
+
+# Edit
+editClusterST (area = "fr",
+                cluster_name = "Additional_Values",
+               constraints_ts = list(
+                 "test" = good_ts,
+                 "test2"    = good_ts+1
+               )  ,
+               add_prefix = TRUE)
+#Read
+res=read_storages_constraints()
+utils::str(res, max.level = 3)  
+```
+
 ### Remove clusters
 
 Nothing has changed to remove clusters.
